--- a/src/main/properties/application-production.properties
+++ b/src/main/properties/application-production.properties
@@ -14,9 +14,9 @@
 # HINT+ - server.servlet.contextPath
 # HINT+ - server.port
 
-spring.datasource.url							= jdbc:mysql://bbpqpapzwlvvqolxxest-mysql.services.clever-cloud.com?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username						= uuvxy7q81g0nhmdm
-spring.datasource.password						= KiZXj95wJqU3ptf3k7ov
+spring.datasource.url							= jdbc:mysql://bc50ha4oxokfaruia624-mysql.services.clever-cloud.com?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username						= uy6ze1gejzgdxfzo
+spring.datasource.password						= RA1wzoIFJEdu970Egbg9
 
 spring.jpa.hibernate.show-sql					= false
 spring.jpa.hibernate.format-sql					= false
